--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,13 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  font-family: Arial, Verdana, sans-serif;
+  font-family: "Roboto", Verdana, sans-serif;
 }
 *, *:before, *:after {
   box-sizing: inherit;
   list-style: none;
   text-decoration: none;
-  color: #6b5e6f;
+  color: #58585A;
   margin: 0;
   padding: 0;
 }
@@ -29,12 +29,50 @@ body {
   font-size: 1.6rem;
 }
 
+header {
+  background: url("../img/header-img.jpg")no-repeat;
+  height: 600px;
+  background-size: cover;
+}
+
+nav{
+  float: right;
+  margin-top: 85px;
+  margin-right: 113px;
+}
+
+nav li {
+  text-align: center;
+  display: inline-block;
+  margin-left: 15px;
+  font-size: 15px;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 15rem;
+}
+
 /* #Classes
 ================================================= */
 
+.mayuscula {
+  text-transform: uppercase;
+}
+
+/*logo*/
+.logo{
+  width: 250px;
+  margin: 5rem 0rem 0rem 5rem;
+
+}
 
 /*titles*/
-
+.title {
+  font-size: 42px;
+  font-size: 4.2rem;
+  font-weight: 100;
+}
 
 /*buttons*/
 
