--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,9 @@ nav li {
   margin-left: 15px;
   font-size: 15px;
 }
+nav li:hover {
+ border-bottom: 1px solid #58585A;
+}
 
 h1 {
   text-align: center;
@@ -73,6 +76,28 @@ h1 {
   font-size: 4.2rem;
   font-weight: 100;
 }
+
+/*acerca*/
+
+.banner {
+  width: 680px;
+  height: 175px;
+  margin: 160px 0px 50px 65px;
+}
+
+.acerca p{
+  width: 61rem;
+  margin-left: 10rem;
+}
+
+.right{
+  float: right;
+  border-left: 1px solid #58585A;
+  margin: 11rem 10rem 0 0;
+  padding: 11rem 4rem;
+}
+
+
 
 /*buttons*/
 
