--- a/css/styles.css
+++ b/css/styles.css
@@ -108,9 +108,31 @@ h1 {
 }
 
 /*contact*/
-.social {
-  width: 45px;
+
+.contact {
+  border-right: 1px solid #58585A;
+  float: left;
+  margin: 11rem 10rem 0 0;
+  padding: 11rem 4rem;
 }
+
+ .social li {
+  display: inline-block;
+ }
+
+ .social img {
+  width: 45px;
+  height: 45px;
+ }
+ 
+.send {
+  float: right;
+  margin: 11rem 10rem 0 0;
+  padding: 11rem 4rem;
+}
+}
+
+
 
 
 /*buttons*/
